qt/webkit/gen_qwebpage.h

class QMetaObject;
class QObject;
class QWebPage;
typedef QWebPage::ChooseMultipleFilesExtensionOption QWebPage__ChooseMultipleFilesExtensionOption;
typedef QWebPage::ChooseMultipleFilesExtensionReturn QWebPage__ChooseMultipleFilesExtensionReturn;
typedef QWebPage::ErrorPageExtensionOption QWebPage__ErrorPageExtensionOption;
typedef QWebPage::ErrorPageExtensionReturn QWebPage__ErrorPageExtensionReturn;
typedef QWebPage::ExtensionOption QWebPage__ExtensionOption;
typedef QWebPage::ExtensionReturn QWebPage__ExtensionReturn;
typedef QWebPage::ViewportAttributes QWebPage__ViewportAttributes;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkRequest QNetworkRequest;
typedef struct QObject QObject;
typedef struct QSizeF QSizeF;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QWebFrame QWebFrame;
typedef struct QWebFullScreenRequest QWebFullScreenRequest;
typedef struct QWebHistoryItem QWebHistoryItem;
typedef struct QWebPage QWebPage;
typedef struct QWebPage__ChooseMultipleFilesExtensionOption QWebPage__ChooseMultipleFilesExtensionOption;
typedef struct QWebPage__ChooseMultipleFilesExtensionReturn QWebPage__ChooseMultipleFilesExtensionReturn;
typedef struct QWebPage__ErrorPageExtensionOption QWebPage__ErrorPageExtensionOption;
typedef struct QWebPage__ErrorPageExtensionReturn QWebPage__ErrorPageExtensionReturn;
typedef struct QWebPage__ExtensionOption QWebPage__ExtensionOption;
typedef struct QWebPage__ExtensionReturn QWebPage__ExtensionReturn;
typedef struct QWebPage__ViewportAttributes QWebPage__ViewportAttributes;
void QWebPage_saveFrameStateRequested(QWebPage* self, QWebFrame* frame, QWebHistoryItem* item);
void QWebPage_connect_saveFrameStateRequested(QWebPage* self, intptr_t slot);
void QWebPage_restoreFrameStateRequested(QWebPage* self, QWebFrame* frame);
void QWebPage_connect_restoreFrameStateRequested(QWebPage* self, intptr_t slot);
void QWebPage_viewportChangeRequested(QWebPage* self);
void QWebPage_connect_viewportChangeRequested(QWebPage* self, intptr_t slot);
void QWebPage_featurePermissionRequested(QWebPage* self, QWebFrame* frame, int feature);
void QWebPage_connect_featurePermissionRequested(QWebPage* self, intptr_t slot);
void QWebPage_featurePermissionRequestCanceled(QWebPage* self, QWebFrame* frame, int feature);
void QWebPage_connect_featurePermissionRequestCanceled(QWebPage* self, intptr_t slot);
void QWebPage_fullScreenRequested(QWebPage* self, QWebFullScreenRequest* fullScreenRequest);
void QWebPage_connect_fullScreenRequested(QWebPage* self, intptr_t slot);
void QWebPage_consoleMessageReceived(QWebPage* self, int source, int level, struct miqt_string message, int lineNumber, struct miqt_string sourceID);
void QWebPage_connect_consoleMessageReceived(QWebPage* self, intptr_t slot);
void QWebPage_recentlyAudibleChanged(QWebPage* self, bool recentlyAudible);
void QWebPage_connect_recentlyAudibleChanged(QWebPage* self, intptr_t slot);
struct miqt_string QWebPage_tr2(const char* s, const char* c);
struct miqt_string QWebPage_tr3(const char* s, const char* c, int n);
struct miqt_string QWebPage_trUtf82(const char* s, const char* c);
struct miqt_string QWebPage_trUtf83(const char* s, const char* c, int n);
bool QWebPage_findText2(QWebPage* self, struct miqt_string subString, int options);
bool QWebPage_override_virtual_metacall(void* self, intptr_t slot);
int QWebPage_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QWebPage_override_virtual_triggerAction(void* self, intptr_t slot);
void QWebPage_virtualbase_triggerAction(void* self, int action, bool checked);
bool QWebPage_override_virtual_event(void* self, intptr_t slot);
bool QWebPage_virtualbase_event(void* self, QEvent* param1);
bool QWebPage_override_virtual_extension(void* self, intptr_t slot);
bool QWebPage_virtualbase_extension(void* self, int extension, QWebPage__ExtensionOption* option, QWebPage__ExtensionReturn* output);
bool QWebPage_override_virtual_supportsExtension(void* self, intptr_t slot);
bool QWebPage_virtualbase_supportsExtension(const void* self, int extension);
bool QWebPage_override_virtual_shouldInterruptJavaScript(void* self, intptr_t slot);
bool QWebPage_virtualbase_shouldInterruptJavaScript(void* self);
bool QWebPage_override_virtual_createWindow(void* self, intptr_t slot);
QWebPage* QWebPage_virtualbase_createWindow(void* self, int type);
bool QWebPage_override_virtual_createPlugin(void* self, intptr_t slot);
QObject* QWebPage_virtualbase_createPlugin(void* self, struct miqt_string classid, QUrl* url, struct miqt_array /* of struct miqt_string */  paramNames, struct miqt_array /* of struct miqt_string */  paramValues);
bool QWebPage_override_virtual_acceptNavigationRequest(void* self, intptr_t slot);
bool QWebPage_virtualbase_acceptNavigationRequest(void* self, QWebFrame* frame, QNetworkRequest* request, int type);
bool QWebPage_override_virtual_chooseFile(void* self, intptr_t slot);
struct miqt_string QWebPage_virtualbase_chooseFile(void* self, QWebFrame* originatingFrame, struct miqt_string oldFile);
bool QWebPage_override_virtual_javaScriptAlert(void* self, intptr_t slot);
void QWebPage_virtualbase_javaScriptAlert(void* self, QWebFrame* originatingFrame, struct miqt_string msg);
bool QWebPage_override_virtual_javaScriptConfirm(void* self, intptr_t slot);
bool QWebPage_virtualbase_javaScriptConfirm(void* self, QWebFrame* originatingFrame, struct miqt_string msg);
bool QWebPage_override_virtual_javaScriptConsoleMessage(void* self, intptr_t slot);
void QWebPage_virtualbase_javaScriptConsoleMessage(void* self, struct miqt_string message, int lineNumber, struct miqt_string sourceID);
bool QWebPage_override_virtual_userAgentForUrl(void* self, intptr_t slot);
struct miqt_string QWebPage_virtualbase_userAgentForUrl(const void* self, QUrl* url);
bool QWebPage_override_virtual_eventFilter(void* self, intptr_t slot);
bool QWebPage_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QWebPage_override_virtual_timerEvent(void* self, intptr_t slot);
void QWebPage_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QWebPage_override_virtual_childEvent(void* self, intptr_t slot);
void QWebPage_virtualbase_childEvent(void* self, QChildEvent* event);
bool QWebPage_override_virtual_customEvent(void* self, intptr_t slot);
void QWebPage_virtualbase_customEvent(void* self, QEvent* event);
bool QWebPage_override_virtual_connectNotify(void* self, intptr_t slot);
void QWebPage_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QWebPage_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QWebPage_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QWebPage_delete(QWebPage* self);
QWebPage__ViewportAttributes* QWebPage__ViewportAttributes_new();
QWebPage__ViewportAttributes* QWebPage__ViewportAttributes_new2(QWebPage__ViewportAttributes* other);
void QWebPage__ViewportAttributes_operatorAssign(QWebPage__ViewportAttributes* self, QWebPage__ViewportAttributes* other);
double QWebPage__ViewportAttributes_initialScaleFactor(const QWebPage__ViewportAttributes* self);
double QWebPage__ViewportAttributes_minimumScaleFactor(const QWebPage__ViewportAttributes* self);
double QWebPage__ViewportAttributes_maximumScaleFactor(const QWebPage__ViewportAttributes* self);
double QWebPage__ViewportAttributes_devicePixelRatio(const QWebPage__ViewportAttributes* self);
bool QWebPage__ViewportAttributes_isUserScalable(const QWebPage__ViewportAttributes* self);
bool QWebPage__ViewportAttributes_isValid(const QWebPage__ViewportAttributes* self);
QSizeF* QWebPage__ViewportAttributes_size(const QWebPage__ViewportAttributes* self);
void QWebPage__ViewportAttributes_delete(QWebPage__ViewportAttributes* self);
QWebPage__ExtensionOption* QWebPage__ExtensionOption_new(QWebPage__ExtensionOption* param1);
void QWebPage__ExtensionOption_delete(QWebPage__ExtensionOption* self);
QWebPage__ExtensionReturn* QWebPage__ExtensionReturn_new(QWebPage__ExtensionReturn* param1);
QWebPage__ExtensionReturn* QWebPage__ExtensionReturn_new2();
void QWebPage__ExtensionReturn_delete(QWebPage__ExtensionReturn* self);
void QWebPage__ChooseMultipleFilesExtensionOption_delete(QWebPage__ChooseMultipleFilesExtensionOption* self);
void QWebPage__ChooseMultipleFilesExtensionReturn_delete(QWebPage__ChooseMultipleFilesExtensionReturn* self);
QWebPage__ErrorPageExtensionOption* QWebPage__ErrorPageExtensionOption_new(QWebPage__ErrorPageExtensionOption* param1);
void QWebPage__ErrorPageExtensionOption_operatorAssign(QWebPage__ErrorPageExtensionOption* self, QWebPage__ErrorPageExtensionOption* param1);
void QWebPage__ErrorPageExtensionOption_delete(QWebPage__ErrorPageExtensionOption* self);
QWebPage__ErrorPageExtensionReturn* QWebPage__ErrorPageExtensionReturn_new();
QWebPage__ErrorPageExtensionReturn* QWebPage__ErrorPageExtensionReturn_new2(QWebPage__ErrorPageExtensionReturn* param1);
void QWebPage__ErrorPageExtensionReturn_operatorAssign(QWebPage__ErrorPageExtensionReturn* self, QWebPage__ErrorPageExtensionReturn* param1);
void QWebPage__ErrorPageExtensionReturn_delete(QWebPage__ErrorPageExtensionReturn* self);