qt/webkit/gen_qwebpage.nim

proc fcQWebPage_saveFrameStateRequested(self: pointer, frame: pointer, item: pointer): void {.importc: "QWebPage_saveFrameStateRequested".}
proc fQWebPage_connect_saveFrameStateRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_saveFrameStateRequested".}
proc fcQWebPage_restoreFrameStateRequested(self: pointer, frame: pointer): void {.importc: "QWebPage_restoreFrameStateRequested".}
proc fQWebPage_connect_restoreFrameStateRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_restoreFrameStateRequested".}
proc fcQWebPage_viewportChangeRequested(self: pointer, ): void {.importc: "QWebPage_viewportChangeRequested".}
proc fQWebPage_connect_viewportChangeRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_viewportChangeRequested".}
proc fcQWebPage_featurePermissionRequested(self: pointer, frame: pointer, feature: cint): void {.importc: "QWebPage_featurePermissionRequested".}
proc fQWebPage_connect_featurePermissionRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_featurePermissionRequested".}
proc fcQWebPage_featurePermissionRequestCanceled(self: pointer, frame: pointer, feature: cint): void {.importc: "QWebPage_featurePermissionRequestCanceled".}
proc fQWebPage_connect_featurePermissionRequestCanceled(self: pointer, slot: int) {.importc: "QWebPage_connect_featurePermissionRequestCanceled".}
proc fcQWebPage_fullScreenRequested(self: pointer, fullScreenRequest: pointer): void {.importc: "QWebPage_fullScreenRequested".}
proc fQWebPage_connect_fullScreenRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_fullScreenRequested".}
proc fcQWebPage_consoleMessageReceived(self: pointer, source: cint, level: cint, message: struct_miqt_string, lineNumber: cint, sourceID: struct_miqt_string): void {.importc: "QWebPage_consoleMessageReceived".}
proc fQWebPage_connect_consoleMessageReceived(self: pointer, slot: int) {.importc: "QWebPage_connect_consoleMessageReceived".}
proc fcQWebPage_recentlyAudibleChanged(self: pointer, recentlyAudible: bool): void {.importc: "QWebPage_recentlyAudibleChanged".}
proc fQWebPage_connect_recentlyAudibleChanged(self: pointer, slot: int) {.importc: "QWebPage_connect_recentlyAudibleChanged".}
proc fcQWebPage_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebPage_tr2".}
proc fcQWebPage_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebPage_tr3".}
proc fcQWebPage_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebPage_trUtf82".}
proc fcQWebPage_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebPage_trUtf83".}
proc fcQWebPage_findText2(self: pointer, subString: struct_miqt_string, options: cint): bool {.importc: "QWebPage_findText2".}
proc fQWebPage_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QWebPage_virtualbase_metacall".}
proc fcQWebPage_override_virtual_metacall(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_metacall".}
proc fQWebPage_virtualbase_triggerAction(self: pointer, action: cint, checked: bool): void{.importc: "QWebPage_virtualbase_triggerAction".}
proc fcQWebPage_override_virtual_triggerAction(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_triggerAction".}
proc fQWebPage_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QWebPage_virtualbase_event".}
proc fcQWebPage_override_virtual_event(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_event".}
proc fQWebPage_virtualbase_extension(self: pointer, extension: cint, option: pointer, output: pointer): bool{.importc: "QWebPage_virtualbase_extension".}
proc fcQWebPage_override_virtual_extension(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_extension".}
proc fQWebPage_virtualbase_supportsExtension(self: pointer, extension: cint): bool{.importc: "QWebPage_virtualbase_supportsExtension".}
proc fcQWebPage_override_virtual_supportsExtension(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_supportsExtension".}
proc fQWebPage_virtualbase_shouldInterruptJavaScript(self: pointer, ): bool{.importc: "QWebPage_virtualbase_shouldInterruptJavaScript".}
proc fcQWebPage_override_virtual_shouldInterruptJavaScript(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_shouldInterruptJavaScript".}
proc fQWebPage_virtualbase_createWindow(self: pointer, typeVal: cint): pointer{.importc: "QWebPage_virtualbase_createWindow".}
proc fcQWebPage_override_virtual_createWindow(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_createWindow".}
proc fQWebPage_virtualbase_createPlugin(self: pointer, classid: struct_miqt_string, url: pointer, paramNames: struct_miqt_array, paramValues: struct_miqt_array): pointer{.importc: "QWebPage_virtualbase_createPlugin".}
proc fcQWebPage_override_virtual_createPlugin(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_createPlugin".}
proc fQWebPage_virtualbase_acceptNavigationRequest(self: pointer, frame: pointer, request: pointer, typeVal: cint): bool{.importc: "QWebPage_virtualbase_acceptNavigationRequest".}
proc fcQWebPage_override_virtual_acceptNavigationRequest(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_acceptNavigationRequest".}
proc fQWebPage_virtualbase_chooseFile(self: pointer, originatingFrame: pointer, oldFile: struct_miqt_string): struct_miqt_string{.importc: "QWebPage_virtualbase_chooseFile".}
proc fcQWebPage_override_virtual_chooseFile(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_chooseFile".}
proc fQWebPage_virtualbase_javaScriptAlert(self: pointer, originatingFrame: pointer, msg: struct_miqt_string): void{.importc: "QWebPage_virtualbase_javaScriptAlert".}
proc fcQWebPage_override_virtual_javaScriptAlert(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_javaScriptAlert".}
proc fQWebPage_virtualbase_javaScriptConfirm(self: pointer, originatingFrame: pointer, msg: struct_miqt_string): bool{.importc: "QWebPage_virtualbase_javaScriptConfirm".}
proc fcQWebPage_override_virtual_javaScriptConfirm(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_javaScriptConfirm".}
proc fQWebPage_virtualbase_javaScriptConsoleMessage(self: pointer, message: struct_miqt_string, lineNumber: cint, sourceID: struct_miqt_string): void{.importc: "QWebPage_virtualbase_javaScriptConsoleMessage".}
proc fcQWebPage_override_virtual_javaScriptConsoleMessage(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_javaScriptConsoleMessage".}
proc fQWebPage_virtualbase_userAgentForUrl(self: pointer, url: pointer): struct_miqt_string{.importc: "QWebPage_virtualbase_userAgentForUrl".}
proc fcQWebPage_override_virtual_userAgentForUrl(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_userAgentForUrl".}
proc fQWebPage_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWebPage_virtualbase_eventFilter".}
proc fcQWebPage_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_eventFilter".}
proc fQWebPage_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWebPage_virtualbase_timerEvent".}
proc fcQWebPage_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_timerEvent".}
proc fQWebPage_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWebPage_virtualbase_childEvent".}
proc fcQWebPage_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_childEvent".}
proc fQWebPage_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWebPage_virtualbase_customEvent".}
proc fcQWebPage_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_customEvent".}
proc fQWebPage_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWebPage_virtualbase_connectNotify".}
proc fcQWebPage_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_connectNotify".}
proc fQWebPage_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWebPage_virtualbase_disconnectNotify".}
proc fcQWebPage_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWebPage_override_virtual_disconnectNotify".}
proc fcQWebPage_delete(self: pointer) {.importc: "QWebPage_delete".}
proc fcQWebPageViewportAttributes_new(): ptr cQWebPageViewportAttributes {.importc: "QWebPage__ViewportAttributes_new".}
proc fcQWebPageViewportAttributes_new2(other: pointer): ptr cQWebPageViewportAttributes {.importc: "QWebPage__ViewportAttributes_new2".}
proc fcQWebPageViewportAttributes_operatorAssign(self: pointer, other: pointer): void {.importc: "QWebPage__ViewportAttributes_operatorAssign".}
proc fcQWebPageViewportAttributes_initialScaleFactor(self: pointer, ): float64 {.importc: "QWebPage__ViewportAttributes_initialScaleFactor".}
proc fcQWebPageViewportAttributes_minimumScaleFactor(self: pointer, ): float64 {.importc: "QWebPage__ViewportAttributes_minimumScaleFactor".}
proc fcQWebPageViewportAttributes_maximumScaleFactor(self: pointer, ): float64 {.importc: "QWebPage__ViewportAttributes_maximumScaleFactor".}
proc fcQWebPageViewportAttributes_devicePixelRatio(self: pointer, ): float64 {.importc: "QWebPage__ViewportAttributes_devicePixelRatio".}
proc fcQWebPageViewportAttributes_isUserScalable(self: pointer, ): bool {.importc: "QWebPage__ViewportAttributes_isUserScalable".}
proc fcQWebPageViewportAttributes_isValid(self: pointer, ): bool {.importc: "QWebPage__ViewportAttributes_isValid".}
proc fcQWebPageViewportAttributes_size(self: pointer, ): pointer {.importc: "QWebPage__ViewportAttributes_size".}
proc fcQWebPageViewportAttributes_delete(self: pointer) {.importc: "QWebPage__ViewportAttributes_delete".}
proc fcQWebPageExtensionOption_new(param1: pointer): ptr cQWebPageExtensionOption {.importc: "QWebPage__ExtensionOption_new".}
proc fcQWebPageExtensionOption_delete(self: pointer) {.importc: "QWebPage__ExtensionOption_delete".}
proc fcQWebPageExtensionReturn_new(param1: pointer): ptr cQWebPageExtensionReturn {.importc: "QWebPage__ExtensionReturn_new".}
proc fcQWebPageExtensionReturn_new2(): ptr cQWebPageExtensionReturn {.importc: "QWebPage__ExtensionReturn_new2".}
proc fcQWebPageExtensionReturn_delete(self: pointer) {.importc: "QWebPage__ExtensionReturn_delete".}
proc fcQWebPageChooseMultipleFilesExtensionOption_delete(self: pointer) {.importc: "QWebPage__ChooseMultipleFilesExtensionOption_delete".}
proc fcQWebPageChooseMultipleFilesExtensionReturn_delete(self: pointer) {.importc: "QWebPage__ChooseMultipleFilesExtensionReturn_delete".}
proc fcQWebPageErrorPageExtensionOption_new(param1: pointer): ptr cQWebPageErrorPageExtensionOption {.importc: "QWebPage__ErrorPageExtensionOption_new".}
proc fcQWebPageErrorPageExtensionOption_operatorAssign(self: pointer, param1: pointer): void {.importc: "QWebPage__ErrorPageExtensionOption_operatorAssign".}
proc fcQWebPageErrorPageExtensionOption_delete(self: pointer) {.importc: "QWebPage__ErrorPageExtensionOption_delete".}
proc fcQWebPageErrorPageExtensionReturn_new(): ptr cQWebPageErrorPageExtensionReturn {.importc: "QWebPage__ErrorPageExtensionReturn_new".}
proc fcQWebPageErrorPageExtensionReturn_new2(param1: pointer): ptr cQWebPageErrorPageExtensionReturn {.importc: "QWebPage__ErrorPageExtensionReturn_new2".}
proc fcQWebPageErrorPageExtensionReturn_operatorAssign(self: pointer, param1: pointer): void {.importc: "QWebPage__ErrorPageExtensionReturn_operatorAssign".}
proc fcQWebPageErrorPageExtensionReturn_delete(self: pointer) {.importc: "QWebPage__ErrorPageExtensionReturn_delete".}


func init*(T: type QWebPage, h: ptr cQWebPage): QWebPage =
  T(h: h)
proc create*(T: type QWebPage, ): QWebPage =

  QWebPage.init(fcQWebPage_new())
proc create*(T: type QWebPage, parent: gen_qobject.QObject): QWebPage =

  QWebPage.init(fcQWebPage_new2(parent.h))
proc metaObject*(self: QWebPage, ): gen_qobjectdefs.QMetaObject =
